--- a/动态加载图片不显示图片.md
+++ b/动态加载图片不显示图片.md
@@ -1,4 +1,5 @@
-````import {
+```
+import {
   _decorator,
   Component,
   Node,
@@ -15,7 +16,7 @@ export class Game extends Component {
     resources.load(url, SpriteFrame, (err, spriteFrame) => {
       this.node.getComponent(Sprite).spriteFrame = spriteFrame;
     });
-  }```
+  }
+```
 
-  这是原来的代码，运行的时候图片加载不出来，最终确定的原因是url路径问题，因为resources.load()默认已经找到了resources文件夹，这个url的相对路径应该直接在resources下边写，也就是const url = "mycard/spriteFrame";这样更改之后即可正常动态加载图片
-````
+这是原来的代码，运行的时候图片加载不出来，最终确定的原因是 url 路径问题，因为 resources.load()默认已经找到了 resources 文件夹，这个 url 的相对路径应该直接在 resources 下边写，也就是 const url = "mycard/spriteFrame";这样更改之后即可正常动态加载图片
